/*
 * This file was automatically generated by EvoSuite
 * Tue Dec 04 01:18:46 GMT 2018
 */

package system.controller.dao;

import org.junit.Test;
import static org.junit.Assert.*;
import static org.evosuite.shaded.org.mockito.Mockito.*;
import org.evosuite.runtime.EvoRunner;
import org.evosuite.runtime.EvoRunnerParameters;
import org.evosuite.runtime.ViolatedAssumptionAnswer;
import org.evosuite.runtime.javaee.injection.Injector;
import org.junit.runner.RunWith;
import system.controller.service.database.MySQLDatabaseService;
import system.model.questions.QuestionGroup;
import system.model.dao.Dao;
import system.model.dao.QuestionGroupDao;

@RunWith(EvoRunner.class) @EvoRunnerParameters(mockJVMNonDeterminism = true, useVFS = true, useVNET = true, resetStaticState = true, separateClassLoader = true, useJEE = true) 
public class QuestionGroupDao_ESTest extends QuestionGroupDao_ESTest_scaffolding {

  @Test(timeout = 4000)
  public void test0()  throws Throwable  {
      QuestionGroup questionGroup0 = mock(QuestionGroup.class, new ViolatedAssumptionAnswer());
      Object object0 = QuestionGroupDao.__CLR4_1_218d18djp8v55va.lambdaInc(0, questionGroup0, 2028);
      assertNotNull(object0);
  }

  @Test(timeout = 4000)
  public void test1()  throws Throwable  {
      QuestionGroupDao.__CLR4_1_218d18djp8v55va questionGroupDao___CLR4_1_218d18djp8v55va0 = new QuestionGroupDao.__CLR4_1_218d18djp8v55va();
  }

  @Test(timeout = 4000)
  public void test2()  throws Throwable  {
      QuestionGroupDao questionGroupDao0 = new QuestionGroupDao();
      MySQLDatabaseService mySQLDatabaseService0 = mock(MySQLDatabaseService.class, new ViolatedAssumptionAnswer());
      Injector.inject(questionGroupDao0, (Class<?>) Dao.class, "databaseService", (Object) mySQLDatabaseService0);
      Injector.validateBean(questionGroupDao0, (Class<?>) QuestionGroupDao.class);
      assertFalse(Dao.SQLITE_NOT_MYSQL);
  }
}
