/*
 * This file was automatically generated by EvoSuite
 * Tue Dec 04 01:14:26 GMT 2018
 */

package system.controller.dao;

import org.junit.Test;
import static org.junit.Assert.*;
import static org.evosuite.shaded.org.mockito.Mockito.*;
import org.evosuite.runtime.EvoRunner;
import org.evosuite.runtime.EvoRunnerParameters;
import org.evosuite.runtime.ViolatedAssumptionAnswer;
import org.evosuite.runtime.javaee.injection.Injector;
import org.junit.runner.RunWith;
import system.model.dao.Dao;
import system.model.dao.QuizDao;
import system.controller.service.database.MySQLDatabaseService;

@RunWith(EvoRunner.class) @EvoRunnerParameters(mockJVMNonDeterminism = true, useVFS = true, useVNET = true, resetStaticState = true, separateClassLoader = true, useJEE = true) 
public class QuizDao_ESTest extends QuizDao_ESTest_scaffolding {

  @Test(timeout = 4000)
  public void test0()  throws Throwable  {
      Object object0 = QuizDao.__CLR4_1_2106106jp8v55cq.lambdaInc(0, "eDW<b5g,>7&ze", 0);
      assertNotNull(object0);
  }

  @Test(timeout = 4000)
  public void test1()  throws Throwable  {
      QuizDao.__CLR4_1_2106106jp8v55cq quizDao___CLR4_1_2106106jp8v55cq0 = new QuizDao.__CLR4_1_2106106jp8v55cq();
  }

  @Test(timeout = 4000)
  public void test2()  throws Throwable  {
      QuizDao quizDao0 = new QuizDao();
      MySQLDatabaseService mySQLDatabaseService0 = mock(MySQLDatabaseService.class, new ViolatedAssumptionAnswer());
      Injector.inject(quizDao0, (Class<?>) Dao.class, "databaseService", (Object) mySQLDatabaseService0);
      Injector.validateBean(quizDao0, (Class<?>) QuizDao.class);
      assertFalse(Dao.SQLITE_NOT_MYSQL);
  }
}
