/*
 * This file was automatically generated by EvoSuite
 * Tue Dec 04 01:29:48 GMT 2018
 */

package system.controller.dao;

import org.junit.Test;
import static org.junit.Assert.*;
import static org.evosuite.shaded.org.mockito.Mockito.*;
import org.evosuite.runtime.EvoRunner;
import org.evosuite.runtime.EvoRunnerParameters;
import org.evosuite.runtime.ViolatedAssumptionAnswer;
import org.evosuite.runtime.javaee.injection.Injector;
import org.junit.runner.RunWith;
import system.model.dao.Dao;
import system.model.dao.QuizGroupDao;
import system.controller.service.database.MySQLDatabaseService;

@RunWith(EvoRunner.class) @EvoRunnerParameters(mockJVMNonDeterminism = true, useVFS = true, useVNET = true, resetStaticState = true, separateClassLoader = true, useJEE = true) 
public class QuizGroupDao_ESTest extends QuizGroupDao_ESTest_scaffolding {

  @Test(timeout = 4000)
  public void test0()  throws Throwable  {
      Integer integer0 = new Integer(287);
      Object object0 = QuizGroupDao.__CLR4_1_2papajp8v553r.lambdaInc(287, integer0, 287);
      assertNotNull(object0);
  }

  @Test(timeout = 4000)
  public void test1()  throws Throwable  {
      QuizGroupDao.__CLR4_1_2papajp8v553r quizGroupDao___CLR4_1_2papajp8v553r0 = new QuizGroupDao.__CLR4_1_2papajp8v553r();
  }

  @Test(timeout = 4000)
  public void test2()  throws Throwable  {
      QuizGroupDao quizGroupDao0 = new QuizGroupDao();
      MySQLDatabaseService mySQLDatabaseService0 = mock(MySQLDatabaseService.class, new ViolatedAssumptionAnswer());
      Injector.inject(quizGroupDao0, (Class<?>) Dao.class, "databaseService", (Object) mySQLDatabaseService0);
      Injector.validateBean(quizGroupDao0, (Class<?>) QuizGroupDao.class);
      assertFalse(Dao.SQLITE_NOT_MYSQL);
  }
}
