/*
 * This file was automatically generated by EvoSuite
 * Tue Dec 04 01:24:35 GMT 2018
 */

package system.controller.dao;

import org.junit.Test;
import static org.junit.Assert.*;
import static org.evosuite.shaded.org.mockito.Mockito.*;
import org.evosuite.runtime.EvoRunner;
import org.evosuite.runtime.EvoRunnerParameters;
import org.evosuite.runtime.ViolatedAssumptionAnswer;
import org.evosuite.runtime.javaee.injection.Injector;
import org.junit.runner.RunWith;
import system.model.dao.Dao;
import system.model.dao.QuizPartDao;
import system.controller.service.database.MySQLDatabaseService;

@RunWith(EvoRunner.class) @EvoRunnerParameters(mockJVMNonDeterminism = true, useVFS = true, useVNET = true, resetStaticState = true, separateClassLoader = true, useJEE = true) 
public class QuizPartDao_ESTest extends QuizPartDao_ESTest_scaffolding {

  @Test(timeout = 4000)
  public void test0()  throws Throwable  {
      Object object0 = QuizPartDao.__CLR4_1_2pspsjp8v555g.lambdaInc(3505, "-q4|}(h", 3505);
      assertNotNull(object0);
  }

  @Test(timeout = 4000)
  public void test1()  throws Throwable  {
      QuizPartDao.__CLR4_1_2pspsjp8v555g quizPartDao___CLR4_1_2pspsjp8v555g0 = new QuizPartDao.__CLR4_1_2pspsjp8v555g();
  }

  @Test(timeout = 4000)
  public void test2()  throws Throwable  {
      QuizPartDao quizPartDao0 = new QuizPartDao();
      MySQLDatabaseService mySQLDatabaseService0 = mock(MySQLDatabaseService.class, new ViolatedAssumptionAnswer());
      Injector.inject(quizPartDao0, (Class<?>) Dao.class, "databaseService", (Object) mySQLDatabaseService0);
      Injector.validateBean(quizPartDao0, (Class<?>) QuizPartDao.class);
      assertFalse(Dao.SQLITE_NOT_MYSQL);
  }
}
