/*
 * This file was automatically generated by EvoSuite
 * Tue Dec 04 01:24:04 GMT 2018
 */

package system.controller.dao;

import org.junit.Test;
import static org.junit.Assert.*;
import static org.evosuite.shaded.org.mockito.Mockito.*;
import org.evosuite.runtime.EvoRunner;
import org.evosuite.runtime.EvoRunnerParameters;
import org.evosuite.runtime.ViolatedAssumptionAnswer;
import org.evosuite.runtime.javaee.injection.Injector;
import org.junit.runner.RunWith;
import system.model.dao.Dao;
import system.model.dao.ResultDao;
import system.controller.service.database.MySQLDatabaseService;

@RunWith(EvoRunner.class) @EvoRunnerParameters(mockJVMNonDeterminism = true, useVFS = true, useVNET = true, resetStaticState = true, separateClassLoader = true, useJEE = true) 
public class ResultDao_ESTest extends ResultDao_ESTest_scaffolding {

  @Test(timeout = 4000)
  public void test0()  throws Throwable  {
      Object object0 = ResultDao.__CLR4_1_2pqpqjp8v5554.lambdaInc(0, "", 0);
      assertNotNull(object0);
  }

  @Test(timeout = 4000)
  public void test1()  throws Throwable  {
      ResultDao.__CLR4_1_2pqpqjp8v5554 resultDao___CLR4_1_2pqpqjp8v5554_0 = new ResultDao.__CLR4_1_2pqpqjp8v5554();
  }

  @Test(timeout = 4000)
  public void test2()  throws Throwable  {
      ResultDao resultDao0 = new ResultDao();
      MySQLDatabaseService mySQLDatabaseService0 = mock(MySQLDatabaseService.class, new ViolatedAssumptionAnswer());
      Injector.inject(resultDao0, (Class<?>) Dao.class, "databaseService", (Object) mySQLDatabaseService0);
      Injector.validateBean(resultDao0, (Class<?>) ResultDao.class);
      assertFalse(Dao.SQLITE_NOT_MYSQL);
  }
}
