/*
 * This file was automatically generated by EvoSuite
 * Tue Dec 04 01:20:15 GMT 2018
 */

package system.controller.dao;

import org.junit.Test;
import static org.junit.Assert.*;
import static org.evosuite.shaded.org.mockito.Mockito.*;
import org.evosuite.runtime.EvoRunner;
import org.evosuite.runtime.EvoRunnerParameters;
import org.evosuite.runtime.ViolatedAssumptionAnswer;
import org.evosuite.runtime.javaee.injection.Injector;
import org.junit.runner.RunWith;
import system.model.dao.Dao;
import system.model.dao.UserDao;
import system.controller.service.database.MySQLDatabaseService;

@RunWith(EvoRunner.class) @EvoRunnerParameters(mockJVMNonDeterminism = true, useVFS = true, useVNET = true, resetStaticState = true, separateClassLoader = true, useJEE = true) 
public class UserDao_ESTest extends UserDao_ESTest_scaffolding {

  @Test(timeout = 4000)
  public void test0()  throws Throwable  {
      UserDao.__CLR4_1_21py1pyjp8v5691 userDao___CLR4_1_21py1pyjp8v5691_0 = new UserDao.__CLR4_1_21py1pyjp8v5691();
  }

  @Test(timeout = 4000)
  public void test1()  throws Throwable  {
      UserDao userDao0 = new UserDao();
      MySQLDatabaseService mySQLDatabaseService0 = mock(MySQLDatabaseService.class, new ViolatedAssumptionAnswer());
      Injector.inject(userDao0, (Class<?>) Dao.class, "databaseService", (Object) mySQLDatabaseService0);
      Injector.validateBean(userDao0, (Class<?>) UserDao.class);
      assertFalse(Dao.SQLITE_NOT_MYSQL);
  }
}
